--- a/fpga-si4463/Total_link/total_link_summary.html
+++ b/fpga-si4463/Total_link/total_link_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (04/21/2016 - 11:15:18)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (04/21/2016 - 15:40:52)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Total_link.xise</TD>
@@ -13,7 +13,7 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>total_link</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Placed and Routed (Failed)</TD>
+<TD>Programming File Generated</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/*.xmsgs?&DataKey=Warning'>545 Warnings (4 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/*.xmsgs?&DataKey=Warning'>545 Warnings (1 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -48,7 +48,7 @@ No Errors</TD>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;</TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>932</TD>
+<TD ALIGN=RIGHT>934</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>931</TD>
+<TD ALIGN=RIGHT>933</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,19 +90,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>1,515</TD>
+<TD ALIGN=RIGHT>1,525</TD>
 <TD ALIGN=RIGHT>5,720</TD>
 <TD ALIGN=RIGHT>26%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>1,501</TD>
+<TD ALIGN=RIGHT>1,505</TD>
 <TD ALIGN=RIGHT>5,720</TD>
 <TD ALIGN=RIGHT>26%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>1,200</TD>
+<TD ALIGN=RIGHT>1,212</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -114,7 +114,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>207</TD>
+<TD ALIGN=RIGHT>199</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -126,7 +126,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Memory</TD>
-<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>6</TD>
 <TD ALIGN=RIGHT>1,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -144,13 +144,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number used as Shift Register</TD>
-<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>6</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>2</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -168,13 +168,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>14</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>6</TD>
+<TD ALIGN=RIGHT>10</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -192,9 +192,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>537</TD>
+<TD ALIGN=RIGHT>607</TD>
 <TD ALIGN=RIGHT>1,430</TD>
-<TD ALIGN=RIGHT>37%</TD>
+<TD ALIGN=RIGHT>42%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
@@ -204,37 +204,37 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>1,630</TD>
+<TD ALIGN=RIGHT>1,659</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>805</TD>
-<TD ALIGN=RIGHT>1,630</TD>
-<TD ALIGN=RIGHT>49%</TD>
+<TD ALIGN=RIGHT>834</TD>
+<TD ALIGN=RIGHT>1,659</TD>
+<TD ALIGN=RIGHT>50%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>115</TD>
-<TD ALIGN=RIGHT>1,630</TD>
-<TD ALIGN=RIGHT>7%</TD>
+<TD ALIGN=RIGHT>134</TD>
+<TD ALIGN=RIGHT>1,659</TD>
+<TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>710</TD>
-<TD ALIGN=RIGHT>1,630</TD>
-<TD ALIGN=RIGHT>43%</TD>
+<TD ALIGN=RIGHT>691</TD>
+<TD ALIGN=RIGHT>1,659</TD>
+<TD ALIGN=RIGHT>41%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>59</TD>
+<TD ALIGN=RIGHT>61</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>132</TD>
+<TD ALIGN=RIGHT>144</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -390,7 +390,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>4.18</TD>
+<TD ALIGN=RIGHT>4.23</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -427,19 +427,19 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周四 四月 21 11:13:44 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>544 Warnings (4 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>37 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周四 四月 21 11:13:52 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周四 四月 21 11:14:51 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周四 四月 21 11:15:11 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周四 四月 21 15:39:00 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>543 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>38 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周四 四月 21 15:39:08 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周四 四月 21 15:40:01 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周四 四月 21 15:40:22 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>周四 四月 21 11:07:37 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>周四 四月 21 11:07:54 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周四 四月 21 15:40:30 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周四 四月 21 15:40:46 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>周四 四月 21 11:07:54 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>周四 四月 21 11:08:00 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 21 15:40:47 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 21 15:40:52 2016</TD></TR>
 </TABLE>
 
 
