--- a/fpga-si4463/Total_link/total_link_summary.html
+++ b/fpga-si4463/Total_link/total_link_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (04/21/2016 - 16:51:57)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>total_link Project Status (05/06/2016 - 16:28:14)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Total_link.xise</TD>
@@ -25,30 +25,30 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/*.xmsgs?&DataKey=Warning'>552 Warnings (4 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/*.xmsgs?&DataKey=Warning'>548 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_envsettings.html'>
+<A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -60,13 +60,13 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>931</TD>
+<TD ALIGN=RIGHT>939</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>930</TD>
+<TD ALIGN=RIGHT>938</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -90,19 +90,19 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>1,570</TD>
-<TD ALIGN=RIGHT>5,720</TD>
-<TD ALIGN=RIGHT>27%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
 <TD ALIGN=RIGHT>1,557</TD>
 <TD ALIGN=RIGHT>5,720</TD>
 <TD ALIGN=RIGHT>27%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
+<TD ALIGN=RIGHT>1,543</TD>
+<TD ALIGN=RIGHT>5,720</TD>
+<TD ALIGN=RIGHT>26%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>1,262</TD>
+<TD ALIGN=RIGHT>1,242</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -114,7 +114,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>201</TD>
+<TD ALIGN=RIGHT>207</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -168,13 +168,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>9</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>5</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -192,7 +192,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>588</TD>
+<TD ALIGN=RIGHT>596</TD>
 <TD ALIGN=RIGHT>1,430</TD>
 <TD ALIGN=RIGHT>41%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -204,27 +204,27 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>1,692</TD>
+<TD ALIGN=RIGHT>1,710</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>855</TD>
-<TD ALIGN=RIGHT>1,692</TD>
-<TD ALIGN=RIGHT>50%</TD>
+<TD ALIGN=RIGHT>875</TD>
+<TD ALIGN=RIGHT>1,710</TD>
+<TD ALIGN=RIGHT>51%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>122</TD>
-<TD ALIGN=RIGHT>1,692</TD>
-<TD ALIGN=RIGHT>7%</TD>
+<TD ALIGN=RIGHT>153</TD>
+<TD ALIGN=RIGHT>1,710</TD>
+<TD ALIGN=RIGHT>8%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>715</TD>
-<TD ALIGN=RIGHT>1,692</TD>
-<TD ALIGN=RIGHT>42%</TD>
+<TD ALIGN=RIGHT>682</TD>
+<TD ALIGN=RIGHT>1,710</TD>
+<TD ALIGN=RIGHT>39%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
@@ -234,12 +234,12 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>140</TD>
+<TD ALIGN=RIGHT>132</TD>
 <TD ALIGN=RIGHT>11,440</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>63</TD>
 <TD ALIGN=RIGHT>102</TD>
 <TD ALIGN=RIGHT>61%</TD>
@@ -405,18 +405,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -427,20 +427,20 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周四 四月 28 13:45:47 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>550 Warnings (4 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>37 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周四 四月 28 13:45:55 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周四 四月 28 13:46:49 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周四 四月 28 13:47:12 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>周五 五月 6 16:26:13 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Warning'>546 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/xst.xmsgs?&DataKey=Info'>38 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.bld'>Translation Report</A></TD><TD>Current</TD><TD>周五 五月 6 16:26:21 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>周五 五月 6 16:27:17 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.par'>Place and Route Report</A></TD><TD>Current</TD><TD>周五 五月 6 16:27:39 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周四 四月 28 13:47:20 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周四 四月 28 13:47:38 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>周五 五月 6 16:27:48 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\total_link.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>周五 五月 6 16:28:05 2016</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 28 13:47:38 2016</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/FPGA/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周四 四月 28 13:47:46 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>周五 五月 6 16:28:06 2016</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TM/Desktop/DE2/Total/Total/Total_link\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>周五 五月 6 16:28:14 2016</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/28/2016 - 
+<br><center><b>Date Generated:</b> 05/06/2016 - 
